added database too

--- a/modules/db.html
+++ b/modules/db.html
@@ -34,6 +34,9 @@
                 <a href="sysVerilog_lab.pdf" class="subscribe-button">
                     <h2>Lab PDF</h2>
                 </a>
+                <a href="EssentialSV_1_2_5_rev3.tar.gz" class="subscribe-button">
+                    <h2>Lab Database</h2>
+                </a>
             </div>
     </div>
 
